--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
     sdk: flutter
   connectivity_plus: ^6.0.5
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
   flutter_bloc: ^8.1.6
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
