--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,13 @@ dependencies:
   flutter:
     sdk: flutter
   connectivity_plus: ^6.0.5
+  convert: ^3.1.1
+  crypto: ^3.0.5
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
   json_annotation: ^4.9.0
-
 
 
 dev_dependencies:
@@ -33,4 +34,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+assets:
+  - .env
 
