--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   convert: ^3.1.1
   crypto: ^3.0.5
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   dio: ^5.7.0
+  equatable: ^2.0.5
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
   json_annotation: ^4.9.0
