--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
+  flutter_native_splash: ^2.4.1
   json_annotation: ^4.9.0
 
 
@@ -36,7 +37,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
-assets:
-  - .env
+  assets:
+    - assets/.env
+    - assets/images/
 
