--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
   flutter_native_splash: ^2.4.1
+  get_it: ^8.0.0
   json_annotation: ^4.9.0
 
 
@@ -40,4 +41,6 @@ flutter:
   assets:
     - assets/.env
     - assets/images/
+
+    
 
